@@ -480,14 +480,12 @@ rb_range_beg_len(range, begp, lenp, len, err)
     }
     if (err == 0 || err == 2) {
 	if (beg > len) goto out_of_range;
-	if (end > len)
-	    end = len;
+	if (end > len) end = len;
     }
     if (end < 0) end += len;
     if (!EXCL(range)) end++;	/* include end point */
-    if (end < 0) goto out_of_range;
     len = end - beg;
-    if (len < 0) goto out_of_range;
+    if (len < 0) len = 0;
 
     *begp = beg;
     *lenp = len;
