@@ -1552,7 +1552,8 @@ rb_str_aref(str, indx)
  *     a[1..3]                #=> "ell"
  *     a[-3,2]                #=> "er"
  *     a[-4..-2]              #=> "her"
- *     a[-2..-4]              #=> nil
+ *     a[12..-1]              #=> nil
+ *     a[-2..-4]              #=> ""
  *     a[/[aeiou](.)\1/]      #=> "ell"
  *     a[/[aeiou](.)\1/, 0]   #=> "ell"
  *     a[/[aeiou](.)\1/, 1]   #=> "l"
